# notes-backend

./: Cargo.toml  package-lock.json  package.json  serverless.yml
functions/add_customer/: Cargo.toml
functions/add_customer/src/: main.rs
functions/customers/add_customer/: Cargo.toml
functions/customers/add_customer/src/: main.rs
functions/customers/list_customers/: Cargo.toml
functions/customers/list_customers/src/: main.rs
functions/customers/notes/list_notes/: Cargo.toml
functions/list_customer_notes/src/: main.rs
functions/list_customers/: Cargo.toml
functions/list_customers/src/: main.rs
graphql/: Cargo.toml
graphql/src/: main.rs
shared/: Cargo.toml
shared/src/db/: mod.rs
shared/src/db/entities/: customer_data.rs  mod.rs
shared/src/db/entities/customer/: customer_data.rs  customer_note.rs  mod.rs
shared/src/db/entities/helpers/: mod.rs
shared/src/db/entities/test/: mod.rs
shared/src/db/table_operations/: add_item.rs  list_items.rs  mod.rs
shared/src/dto/customer/: mod.rs
src/: main.rs
src/dto/: mod.rs
src/dto/project/: mod.rs
src/dto/project_note/: mod.rs
src/repository/: mod.rs
src/repository/entities/project/: mod.rs
src/repository/entities/project_note/: mod.rs
src/resolver/: mod.rs
src/resolver/mutation/: mod.rs
src/resolver/query/: mod.rs
