[workspace]

members = [
    "shared",
    "functions/add_customer",
    "functions/list_customers",
]

[workspace.dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
lambda_runtime = "0.7.0"
lambda_http = "0.7.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-dynamodb = "0.21.0"
anyhow = "1.0.66"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
