[workspace]

members = [
    "shared",
    "graphql",
]

[workspace.dependencies]
lambda_runtime = "0.7.0"
lambda_http = "0.7.3"
aws-sdk-dynamodb = "0.23.0"
aws-config = "0.53.0"

serde = { version = "1.0.147", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_23"] }
serde_json = "1.0"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

anyhow = "1.0.66"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.21.2", features = ["macros"] }

juniper = "^0.15"

