[package]
name = "graphql"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda-web = { version = "0.2.0", features=["actix4"] }
lambda_runtime = "0.7.0"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"

actix-cors = "0.6.4"
actix-web = "4.3.0"
juniper = "^0.15"
juniper_actix = "0.4.0"

serde = { version = "1.0.147", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
serde_json = "1.0"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

anyhow = "1.0.66"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.21.2", features = ["macros"] }
async-trait = "0.1.63"


