[package]
name = "graphql"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
anyhow = { workspace = true }
juniper = { workspace = true }
chrono = { workspace = true }

lambda-web = { version = "0.2.0", features=["actix4"] }
actix-cors = "0.6.4"
actix-web = "4.3.0"
juniper_actix = "0.4.0"
