[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_dynamo = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
juniper = { workspace = true }
