[package]
name = "add_customer"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../../shared" }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

aws-config = "0.51.0"
aws-sdk-dynamodb = { workspace = true }
anyhow = { workspace = true }
